# mememage-provenance

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sample_record.json
.github/workflows/: build-desktop.yml  test.yml
docs/: access-layer.html  conception.html  constellation-integration.html  dashboard.html  feed.html  index.html  record-shapes.html  soul-fields.html  validator.html
docs/css/: conception.css  cosmic-planetarium.css  dashboard.css  feed.css  validator.css
docs/js/: access.js  age-names.js  birth-text.js  cert-renderer.js  codec.js  conception.js  cosmic-audio.js  cosmic-planetarium.js  cosmic-player.js  dashboard.js  data.js  feed.js  gen-band.js  image-decode.js  machine-band.js  png-meta.js  portal.js  rarity-helpers.js  rs.js  sky-band.js  surfaces.js  typewriter.js  ui.js  validator.js  verify.js  watermark.js
docs/samples/: example.soul
examples/: core_quickstart.sh
mememage/: __init__.py  __main__.py  access.py  api.py  bar.py  celestial.py  chain_config.py  chains.py  config.py  constellation.py  core.py  crypto.py  desktop.py  embodiment.py  ephemeris.py  exif.py  forecast.py  gps.py  hashing.py  ia_admin.py  install.py  lineage.py  mint.py  net.py  parsing.py  payload.py  personality.py  profiles.py  rarity.py  rs.py  server.py  signing.py  site_embed.py  site_pack.py  song.py  temperament.py  thumbnail.py  timelock.py  tls.py  tokens.py  (+6 more)
mememage/channels/: __init__.py  http_push.py  internet_archive.py  zenodo.py
mememage/notifiers/: __init__.py  discord.py  slack.py  telegram.py  webhook.py
tests/: _profile_isolation.py  bar_decode_crc.cjs  bar_encode_parity.cjs  bar_soft_anchor.cjs  bar_vscan.cjs  conftest.py  darkmatter_unlock_hash_repro.cjs  open_hash_parity.cjs  test_access.py  test_bar.py  test_bar_evenfill.py  test_bar_js_decode_crc.py  test_bar_js_parity.py  test_bar_js_soft_anchor.py  test_bar_js_vscan.py  test_bar_vscan.py  test_catalog_volume_cull.py  test_celestial.py  test_chain_config_preserve.py  test_chain_delete.py  test_chain_password_hold.py  test_chain_readiness.py  test_chain_reconcile.py  test_chains.py  test_chains_current.py  test_channel_test_connection.py  test_channels.py  test_channels_api.py  test_channels_exists.py  test_cli_seal_decode.py  test_constellation_chain.py  test_core.py  test_core_demo.py  test_dark_gps_seal.py  test_darkmatter_unlock_hash.py  test_dashboard.py  test_decoder_serving.py  test_decoder_site.py  test_desktop_bundle.py  test_desktop_lock.py  (+57 more)
tests/authenticity/: test_sign_verify.py
tests/embodiment/: luma_grid_parity.cjs  test_dhash.py  test_luma_grid.py
tests/fixtures/: validator_base.soul
tests/forgery/: test_signature_forgery.py
tests/integrity/: test_content_hash.py
tests/lifecycle/: test_keygen.py  test_rotation.py
tests/offlineTest/: mememage-465aa25b92eb9bbc.soul
tools/: Mememage.icns  bootstrap.sh  build_app.py  dev-decoder.sh  golden_baseline.py  make_icons.py  mememage_app.spec  run_app.py  sync-decoder.sh  sync-product.sh  vps-setup.sh
